Closed
Bug 397910
Opened 18 years ago
Closed 15 years ago
Message Drafts Not Saved When Composed Offline
Categories
(MailNews Core :: Networking: IMAP, defect)
Tracking
(blocking-thunderbird3.1 rc1+, thunderbird3.1 rc1-fixed, blocking-thunderbird3.0 -)
RESOLVED
FIXED
Thunderbird 3.3a1
People
(Reporter: mscott, Assigned: Bienvenu)
References
()
Details
(Keywords: dataloss, Whiteboard: [fixed RC 1 build 2][needs 1.9.1 patch][gs][gssolved])
Attachments
(1 file, 1 obsolete file)
|
6.67 KB,
patch
|
standard8
:
review+
standard8
:
superreview+
|
Details | Diff | Splinter Review |
Using a trunk nightly.
1) Go Offline
2) Compose a new message but don't send it & don't save it, leave the compose window open.
3) go back online.
3) Several hours after going back online, something caused Thunderbird to hang
On restart, I was unable to find a draft (Imap or in a local folder) for my message.
Updated•17 years ago
|
Product: Core → MailNews Core
Comment 1•16 years ago
|
||
upon going online, I received and Alert "The current command did not succeed. The mail server responded:Empty message to APPEND". Nothing in error console.
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1pre) Gecko/20090619 Shredder/3.0b3pre
Severity: normal → critical
Keywords: dataloss
Comment 2•16 years ago
|
||
Looks similar to bug 433806.
Comment 3•15 years ago
|
||
xref some bugs for ease of tracking.
Comment 4•15 years ago
|
||
Phenomenon I observed with 20091112 build using Gmail IMAP was Bug 528669 comment #1.
Comment 6•15 years ago
|
||
Phenomena observed with Tb 3.0xpre or later in some bugs, with IMAP log or
with detailed observation, instead of steps to reproduce and incident of draft
is lost only. (they ate put in dependency tree)
> (i) with Gecko/20090619 Shredder/3.0b3pre : Bug 397910 comment #1
> (ii) with Gecko/20091112 Shredder/3.0pre : Bug 528669 comment #1
> (iii) unknown, reported on 2010-01-25 : Bug 530709 comment #19
Updated•15 years ago
|
blocking1.9.2: --- → ?
blocking2.0: --- → ?
blocking-seamonkey2.1: --- → ?
blocking-thunderbird3.1: --- → ?
Flags: wanted1.9.0.x?
Flags: blocking1.9.0.19?
Flags: blocking-seamonkey2.0.6?
Flags: blocking-seamonkey2.0.5?
Comment 7•15 years ago
|
||
IMAP log with next parameter is required.
> https://wiki.mozilla.org/MailNews:Logging
> NSPR_LOG_MODULES=imap:5,imapoffline:5,timestamp
Comment 11•15 years ago
|
||
bug 566655 comment #5 (2010-05-18) and bug 566655 comment #7 (2010-05-19) looks behaviour of current nightlies. (i.e. it looks problem is already resolved)
Updated•15 years ago
|
OS: Windows Vista → All
Comment 12•15 years ago
|
||
Value in "Order Received" column is UID of mail when IMAP folder. Show "Order Received" column when you test, please. See Bug 528669 comment #1 for "Order Receved" column value example.
Updated•15 years ago
|
Component: Composition → Networking: IMAP
QA Contact: composition → networking.imap
| Assignee | ||
Comment 13•15 years ago
|
||
I was unable to reproduce this on my Mac a couple days ago, but I'm seeing it in my Windows profile right now, on the same server that worked on the Mac. So I suspect this is more likely to be profile-specific than server-specific (or specific to certain steps that we don't have nailed down yet).
| Assignee | ||
Comment 14•15 years ago
|
||
What I'm seeing on Windows is my favorite nsILocalFile caching of stat results, which means we think the temp file is empty. So I need to clone the file in order to fix this.
Assignee: nobody → bienvenu
Updated•15 years ago
|
blocking1.9.2: ? → ---
blocking2.0: ? → ---
blocking-thunderbird3.1: ? → rc1+
| Assignee | ||
Comment 15•15 years ago
|
||
this fixes the issue. I'm having quite a bit more trouble getting a unit test for this.
| Assignee | ||
Comment 16•15 years ago
|
||
this adds a unit test for copyFileMessage offline (which is what save draft uses). I had to change a couple assertions to warnings to get the test to succeed w/ the fix.
Attachment #446599 -
Attachment is obsolete: true
Attachment #446624 -
Flags: superreview?(bugzilla)
Attachment #446624 -
Flags: review?(bugzilla)
| Assignee | ||
Updated•15 years ago
|
Whiteboard: [has patch for r/sr standard8]
Updated•15 years ago
|
OS: All → Windows XP
Whiteboard: [has patch for r/sr standard8] → [has patch for r/sr standard8] [MS Windows only issue]
Updated•15 years ago
|
Whiteboard: [has patch for r/sr standard8] [MS Windows only issue] → [has patch for r/sr standard8] [Win only issue]
Target Milestone: --- → Thunderbird 3.1rc1
Comment 18•15 years ago
|
||
1.9.0.* have nothing to do with any released TB or SM version.
Flags: wanted1.9.0.x?
Flags: blocking1.9.0.19?
Updated•15 years ago
|
Attachment #446624 -
Flags: superreview?(bugzilla)
Attachment #446624 -
Flags: superreview+
Attachment #446624 -
Flags: review?(bugzilla)
Attachment #446624 -
Flags: review+
| Assignee | ||
Comment 19•15 years ago
|
||
fixed on trunk - http://hg.mozilla.org/comm-central/rev/efe88f656eee
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: [has patch for r/sr standard8] [Win only issue] → [needs branch landing] [Win only issue]
| Assignee | ||
Updated•15 years ago
|
Target Milestone: Thunderbird 3.1rc1 → Thunderbird 3.2a1
Comment 20•15 years ago
|
||
Landed on 1.9.2 branch:
http://hg.mozilla.org/releases/comm-1.9.2/rev/f47d3e48b1a6
http://hg.mozilla.org/releases/comm-1.9.2/rev/a44846d81ebb
status-thunderbird3.1:
--- → rc1-fixed
Whiteboard: [needs branch landing] [Win only issue] → [fixed RC 1 build 2][Win only issue]
Updated•15 years ago
|
Updated•15 years ago
|
blocking-thunderbird3.0: --- → ?
Updated•15 years ago
|
Comment 21•15 years ago
|
||
We won't block or hold off a security update for something that has never worked in this release series. Surely would be nice to take if mailnews people decide so, but not blocking releases.
Flags: blocking-seamonkey2.0.6? → blocking-seamonkey2.0.6-
Comment 22•15 years ago
|
||
(In reply to comment #21)
> We won't block or hold off a security update for something that has never
> worked in this release series. Surely would be nice to take if mailnews people
> decide so, but not blocking releases.
Although this patch applies to comm-1.9.1 there's a bit of fuzz (I didn't look in detail at that). The unit test does however just hang on my Mac.
Thunderbird is already upgrading most users to 3.1, so we're not going to block a 3.0.x release on it.
If someone wants to fix this up so that it works on the 1.9.1 branch, then we would consider accepting a patch.
blocking-thunderbird3.0: ? → -
Whiteboard: [fixed RC 1 build 2][Win only issue] → [fixed RC 1 build 2][needs 1.9.1 patch]
Comment 23•15 years ago
|
||
I'm confused about the status of this bug, because the target milestone is 3.3a1 but it is also marked fixed, and Dan somewhat abiguously said in http://getsatisfaction.com/mozilla_messaging/topics/why_do_i_keep_losing_draft_e_mailslost_e_mail_drafts#reply_2828247 that "one bug... was fixed *in* Thunderbird 3.1". Is this bug really fixed in (i. e. "for") the current release version, 3.1.3?
We need to communicate much more clearly about this bug, users of 3.0.x are getting really angry about this in GS, plus the added confusion of
Bug 497952 - Activity Manager / statusbar message "Deleted x message(s) from [Drafts...]" can cause user confusion (users think there is dataloss)
http://getsatisfaction.com/mozilla_messaging/tags/bug_397910
http://getsatisfaction.com/mozilla_messaging/tags/bug_497952
Users are mixing up the two issues, really big confusion on GS, and many reports for both of them. Users who really have dataloss because of this bug have commented in topics about the bad status bar message (which is harmless), and users who saw the harmless status bar thing think they have lost messages (but they haven't). I've tried to tag as many topics as I could find about this, sometimes with both bugs so that we have easier reference. Someone needs to do some merging in getsatisfaction.
Comment 24•15 years ago
|
||
(In reply to comment #23)
> I'm confused about the status of this bug, because the target milestone is
> 3.3a1 but it is also marked fixed ... Is this bug really fixed in
> (i. e. "for") the current release version, 3.1.3?
Target milestone shows which release it is aimed for - or in this case, fixed in. However, that's just the next trunk release.
Look at the status-thunderbird3.1 flag - that says rc1-fixed. So this bug was fixed for 3.1rc1 i.e. 3.1 final.
Comment 25•15 years ago
|
||
We need to flag one of the GS topics canonical for this bug: I recommend http://gsfn.us/t/po2n for that.
http://gsfn.us/t/po2n has a much better / clearer description with detailed STR, explicit version no etc. Therefore, it should be made canonical, and get a decent company comment pointing to this bug and that it's fixed for 3.1.
After that, http://gsfn.us/t/keyv should be merged with the canical one.
Any disagreement about that procedure?
Comment 26•15 years ago
|
||
A fine choice; looks like Wayne has helped make it happen already. Thanks, Thomas!
Comment 27•15 years ago
|
||
finishing this up in getsatisfaction. http://gsfn.us/t/po2n is canonical
Whiteboard: [fixed RC 1 build 2][needs 1.9.1 patch] → [fixed RC 1 build 2][needs 1.9.1 patch][gs][gssolved]
Comment 28•15 years ago
|
||
W00t; thanks Wayne & David! It's great seeing stuff like this solved end-to-end.
You need to log in
before you can comment on or make changes to this bug.
Description
•