fix saving imap drafts offline on windows, r/sr=standard bug 397910